logout, videos correction in progress, data migration - authentication