@@ -57,14 +57,6 @@ dependencies {
 	testCompile group: 'org.spockframework', name: 'spock-spring', version: '2.0-M3-groovy-2.5'
 }
 
-tasks.withType(JavaCompile) {
-	options.compilerArgs += '--enable-preview'
-}
-
-tasks.withType(Test) {
-	jvmArgs += "--enable-preview"
-}
-
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
